@@ -11,7 +11,6 @@ idna==2.9
 imageio==2.8.0
 importlib-metadata==1.6.0
 kiwisolver==1.2.0
-matplotlib==3.2.1
 mccabe==0.6.1
 mock==4.0.2
 mocker==1.1.1
@@ -24,6 +23,7 @@ pluggy==0.13.1
 py==1.8.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
+PyInstaller==4.0.dev0+f877f3eb8a
 pyparsing==2.4.7
 pytest==5.4.1
 pytest-cov==2.8.1
