@@ -4,6 +4,8 @@ This file keeps a record of important changes to the project.
 This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased] - <>
+## Changed
+-Remove matplotlib dependency
 
 ## [v0.7.3] - 2020-05-07
 ### Added 
